fixed the image alignment of my profile word picture for ios.

--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -184,7 +184,7 @@ html {
 .contact-bullet-points {
   background-color: #11016d;
   padding: 15px;
-  border: 2px solid black;
+  border: 2px solid white;
   border-radius: 30px;
 }
 
@@ -454,7 +454,7 @@ html {
     margin: 0px;
   
     img {
-      width: 90%;
+      width: 110%;
       margin-top: 65px;
     }
   }
